src/less/components/nav.less
/* ... */
.account-item-apply-colors() {
	> .name-column {
		> .name {
			color: @account-text-color-primary;
		}

		> .address {
			color: @account-text-color-secondary;
		}
	}

	> .balance-column {
		> .balance {
			&.primary {
				color: @account-text-color-primary;
			}

			&.converted {
				color: @account-text-color-secondary;
			}
		}
	}
}

.accounts-dropdown {
	position: absolute;
	width: 30%;
	min-width: 300px;
	max-width: 600px;
	max-height: 400px;
	border: 2px solid #8F8FAB;
	background: @nav-tooltip-color-background;
	border-radius: 10px;
	z-index: 2;
	overflow-y: scroll;
	line-height: 1;
	box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.15);
	opacity: 0;
	transition: opacity 200ms ease-in-out;
	pointer-events: none;

	top: 70px;
	@media (max-width: 939px) {
		top: @mobile-top-bar-height + 70px;
	}

	left: 62px;
	@media (min-width: 1200px) {
		left: 72px;
	}

	&.visible {
		opacity: 1;
		pointer-events: all;
	}

	> .header {
		text-transform: uppercase;
		font-size: 12px;
		font-weight: 500;
		color: @nav-half-muted-color;
		padding: 8px;
	}

	> .account {
		display: flex;
		justify-content: space-between;
		background: @nav-tooltip-color-background;
		border-bottom: 1px solid #1C1F28;
		padding: 8px;
		cursor: pointer;
		transition: background-color 100ms ease-in-out;

		&.active {
			border-bottom-width: 4px;
			cursor: default;
		}

		&:last-child {
			border-bottom: none;
		}

		@account-text-color-primary: #E1E6F7;
		@account-text-color-secondary: #A3B0D6;
		.account-item-apply-colors();

		&:not(.active):hover {
			background: #D0D9F5;

			@account-text-color-primary: @nav-tooltip-color-background;
			@account-text-color-secondary: #535869;
			.account-item-apply-colors();
		}

		> .name-column {
			overflow: hidden;

			> .name {
				font-size: 14px;
				font-weight: 500;
				padding-bottom: 4px;
				transition: color 100ms ease-in-out;
				.truncated-text();
			}

			> .address {
				font-size: 12px;
				transition: color 100ms ease-in-out;
				.truncated-text();
			}
		}

		> .balance-column {
			text-align: right;
			margin-left: 20px;

			> .balance {
				&.primary {
					font-size: 14px;
					font-weight: 500;
					padding-bottom: 4px;
					white-space: nowrap;
					transition: color 100ms ease-in-out;

					> .incoming-label {
						background: @global-primary-background;
						border-radius: 10px;
						font-size: 10px;
						padding: 2px 8px;
						margin-right: 3px;
						vertical-align: 1px;
						text-transform: uppercase;
						color: #FFF;

						> .text-full {
							display: none;
						}

						> .text-snippet {
							display: inline-block;
						}

						@media (min-width: 1500px) {
							> .text-full {
								display: inline-block;
							}

							> .text-snippet {
								display: none;
							}
						}
					}
				}

				&.converted {
					font-size: 12px;
					white-space: nowrap;
					transition: color 100ms ease-in-out;
				}
			}
		}
	}
}

.health-state-apply-colors() {
	color: @health-state-color;

	> .health-icon {
		background-color: @health-state-color;
	}
}
/* ... */

